--- a/index.html
+++ b/index.html
@@ -3,25 +3,41 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Portafolio</title>
+    <title>Portafolio Ana García</title>
     <link rel="stylesheet" href="styles/styles.css">
 </head>
 <body>
-    <main>
-        <div class="contenedor-parrafos-botones">
-            <div class="parrafos">
-                <p class="primer-parrafo">Eleve tu negocio digital a otro nivel <span class="text-blue">con un Front-end de calidad!</span></p>
-                <p class="segundo-parrafo">¡Hola! Soy Ana García, desarrolladora Front-end con especialización en React, HTML y CSS. Ayudo a pequeños negocios y diseñadores a llevar a cabo buenas ideas. ¿Hablamos?</p>
-            </div>
-            <div class="botones">
-                <button><a href="">Instagram</a></button>
-                <button><a href="">GitHub</a></button>
-            </div>
+    <header>
+        <div class="nav-bar">
+            <ul class="nav-bar-list">
+                <li class="nav-bar-item">Home</li>
+                <li class="nav-bar-item">Sobre mí</li>
+            </ul>
         </div>
-        <div class="contenedor-imagen">
-            <img src="assets/Imagen.png" alt="Un foto mía, mujer blanca de pelo lacio sonriendo frente a un portátil">
+    </header>
+
+    <main>
+        <div class="contenido">
+            <div class="contenedor-parrafos-botones">
+                <div class="parrafos">
+                    <p class="primer-parrafo">Eleve tu negocio digital a otro nivel <span class="text-blue">con un Front-end de calidad!</span></p>
+                    <p class="segundo-parrafo">¡Hola! Soy Ana García, desarrolladora Front-end con especialización en React, HTML y CSS. Ayudo a pequeños negocios y diseñadores a llevar a cabo buenas ideas. ¿Hablamos?</p>
+                </div>
+                <div class="presentacion-enlaces">
+                    <h2 class="presentacion-enlaces-subtitulo">Accede a mis redes:</h2>
+                    <a class="presentacion-enlaces-link" href="https://github.com"><img class="link-imagen" src="assets/github.png" alt="Logo de GitHub" target="_blank">GitHub</a>
+                    <a class="presentacion-enlaces-link" href="https://linkedin.com"><img class="link-imagen" src="assets/linkedin.png" alt="Logo de Linkedin" target="_blank">Linkedin</a>
+                    <!-- <a class="presentacion-enlaces-link" href=""><img class="link-imagen" src="assets/twitch.png" alt="">Twitch</a> -->
+                </div>
+            </div>
+            <div class="contenedor-imagen">
+                <img src="assets/Imagen.png" alt="Un foto mía, mujer blanca de pelo lacio sonriendo frente a un portátil">
+            </div>
         </div>
     </main>
-    <div></div>
+    <footer class="footer">
+        <p class="footer-parrafo">Desarrollado por Alura Latam</p>
+    </footer>
+
 </body>
 </html>
